--- a/G.A.Z.SIOS/Views/Event/EventEdit.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventEdit.cshtml
@@ -87,6 +87,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
+                        @Html.ActionLink("Powrót", "Moje_wydarzenia", "Event", new { @class = "btn btn-default" })
                         <input type="submit" value="Edytuj wydarzenie" class="btn btn-default" />
                     </div>
                 </div>
