--- a/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
+++ b/G.A.Z.SIOS/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("O nas", "About", "Home")</li>
                     <li>@Html.ActionLink("Wydarzenia", "EventList", "Event")</li>
-                    <li>@Html.ActionLink("Moje wydarzenia", "Dodaj_wydarzenie", "Home")</li>
+                    <li>@Html.ActionLink("Moje wydarzenia", "Moje_wydarzenia", "Event")</li>
                     <li>@Html.ActionLink("Opinie i raporty", "Opinie_i_raporty", "Home")</li>
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                 </ul>
