--- a/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
+++ b/G.A.Z.SIOS/Views/Event/EventDetails.cshtml
@@ -1,30 +1,34 @@
-﻿@model G.A.Z.SIOS.Models.EventViewModels
+﻿@model G.A.Z.SIOS.Models.ImageDetails
 @{
     ViewBag.Title = "Szczegóły";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var miesiac = "";
     var minuta = "";
-    if (Model.Data.Month < 10) { miesiac = "0" + Model.Data.Month; } else { miesiac += Model.Data.Month; }
-    if (Model.Data.Minute < 10) { minuta = "0" + Model.Data.Minute; } else { minuta += Model.Data.Minute; }
+    if (Model.EventViewModels.Data.Month < 10) { miesiac = "0" + Model.EventViewModels.Data.Month; } else { miesiac += Model.EventViewModels.Data.Month; }
+    if (Model.EventViewModels.Data.Minute < 10) { minuta = "0" + Model.EventViewModels.Data.Minute; } else { minuta += Model.EventViewModels.Data.Minute; }
 }
 
-<h2>@Html.DisplayFor(m => m.Nazwa)</h2>
+<h2>@Html.DisplayFor(m => m.EventViewModels.Nazwa)</h2>
 <dev class="row">
     <div class="col-md-4">
-        <h4>Miejsce: @Html.DisplayFor(m => m.Miejsce)</h4>
-        <h4>Data:    @Html.DisplayFor(m => m.Data.Day).@miesiac.@Html.DisplayFor(m => m.Data.Year)</h4>
-        <h4>Godzina: @Html.DisplayFor(m => m.Data.Hour):@minuta</h4>
-        <h4>Cena:    @Html.DisplayFor(m => m.Cena_wejsciowki)zł</h4>
-        <p>@Html.DisplayFor(m => m.Opis)</p>
+        @if (Model.ImageViewModels != null)
+        {
+            <img src="data:image;base64,@Convert.ToBase64String(Model.ImageViewModels.ImageByte)" width="300" height="300" />
+        }
+        <h4>Miejsce: @Html.DisplayFor(m => m.EventViewModels.Miejsce)</h4>
+        <h4>Data:    @Html.DisplayFor(m => m.EventViewModels.Data.Day).@miesiac.@Html.DisplayFor(m => m.EventViewModels.Data.Year)</h4>
+        <h4>Godzina: @Html.DisplayFor(m => m.EventViewModels.Data.Hour):@minuta</h4>
+        <h4>Cena:    @Html.DisplayFor(m => m.EventViewModels.Cena_wejsciowki)zł</h4>
+        <p>@Html.DisplayFor(m => m.EventViewModels.Opis)</p>
     </div>
     <div class="col-md-7">
         <div class="col-md-4">
-            <h4>Bierze udział: @Html.DisplayFor(m => m.Udzial_count)</h4>
-            <h4>Zainteresowani: @Html.DisplayFor(m => m.Zainteresowani_count)</h4>
+            <h4>Bierze udział: @Html.DisplayFor(m => m.EventViewModels.Udzial_count)</h4>
+            <h4>Zainteresowani: @Html.DisplayFor(m => m.EventViewModels.Zainteresowani_count)</h4>
         </div>
         <div class="col-md-4">
-            <input type="button" value="Weź udział" class="btn btn-default" onclick="location.href='@Url.Action("EventDetails", "Event", new { id = @Html.DisplayFor(m => m.ID), t = 1 })'" />
-            <input type="button" value="Zaiteresowany" class="btn btn-default" onclick="location.href='@Url.Action("EventDetails", "Event", new { id = @Html.DisplayFor(m => m.ID), t = 2 })'" />
+            <input type="button" value="Weź udział" class="btn btn-default" onclick="location.href='@Url.Action("EventParticipant", "Event", new { id = @Html.DisplayFor(m => m.EventViewModels.ID)})'" />
+            <input type="button" value="Zaiteresowany" class="btn btn-default" onclick="location.href='@Url.Action("EventInterested", "Event", new { id = @Html.DisplayFor(m => m.EventViewModels.ID)})'" />
         </div>
         <div class="text-success">
             <strong>@ViewBag.SuccessMessage</strong>
