--- a/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
@@ -21,8 +21,8 @@ var
         <div class="form-group">
             <h4>Wybierz wydarzenie</h4>
             <div class="col-md-10">
-                @Html.ListBoxFor("Lista wydarzeń", new SelectList(Enum.GetValues(typeof(Gender))), new { @class = "form-control" })
-                <h4>@Html.DisplayFor(modelItem => item.Nazwa)</h4>
+                
+                Planowany rozwój zakładki. Brak funduszy.
             </div>
         </div>
     }
