--- a/G.A.Z.SIOS/Views/Manage/Index.cshtml
+++ b/G.A.Z.SIOS/Views/Manage/Index.cshtml
@@ -25,14 +25,8 @@
         </dd>
         <dt>Punkty lojalnościowe:</dt>
         <dd>
-            <p class="text-info">
-                Punkty lojalościowe otrzymuje się za wzięcie udziału w wydarzeniu i przesyłaniu opini. Zdobyte punkty lojalnościowe możesz wymienić na nagrody.
-            </p>
-        </dd>
-        <dt>Twoje punkty:</dt>
-        <dd>
             <p>
-                Nie posiadasz żadnych punktów lojalnościowych.
+                @Html.ActionLink("Zobacz swoje punkty", "Points")
             </p>
         </dd>
     </dl>
