--- a/G.A.Z.SIOS/Views/Manage/Points.cshtml
+++ b/G.A.Z.SIOS/Views/Manage/Points.cshtml
@@ -15,7 +15,7 @@
                 Punkty lojalościowe otrzymuje się za wzięcie udziału w wydarzeniu i przesyłaniu opini. Zdobyte punkty lojalnościowe możesz wymienić na nagrody.
             </p>
         </dd>
-        <dt>Zgromadzone unkty lojalnościowe:</dt>
+        <dt>Zgromadzone Punkty:</dt>
         <dd>
             @Html.DisplayFor(m => m.Points)
         </dd>
