--- a/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
+++ b/G.A.Z.SIOS/Views/Home/Opinie_i_raporty.cshtml
@@ -1,6 +1,6 @@
 ﻿@model G.A.Z.SIOS.Models.Events
 @{
-    ViewBag.Title = "Opinie_i_raporty";
+    ViewBag.Title = "Opinie";
 }
 <br />
 <h2>@ViewBag.Title.</h2>
@@ -11,9 +11,9 @@
 <h2>Wybierz wydarzenie o którym chcesz napisać opinię</h2>
 <label for=" Moje_wydarzenia">Wydarzenia</label>
 <select id="Moje_wydarzenia">
-    <option value="Wydrzenie u Jacka">Wydrzenie u Jacka</option>
-    <option value="Otrzęsiny WAT">Otrzęsiny WAT</option>
-    <option value="Targi pracy">Targi pracy</option>
+    <option value="prez">Prezentacja wyników GAZ-SIOS</option>
+    <option value="juwe">Juwenalia WAT</option>
+    <option value="wat">Promocja WAT</option>
 </select>
 <h2>Twoja opinia</h2>
 <textarea rows="8" cols="50">
